--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   path_provider: ^2.1.2 # Tambahkan path_provider yang mungkin terlewat
   photo_view: ^0.15.0
   get_storage: ^2.1.1
+  geolocator: ^10.0.0
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
