--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   get_storage: ^2.1.1
   geolocator: ^10.0.0
   geocoding: ^2.1.0
+  file_picker: ^8.0.7
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
