--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application
-        android:label="e-blbc"
+        android:label="E-BLBC"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/e_blbc">
         <activity
             android:name=".MainActivity"
             android:exported="true"
