--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   geocoding: ^2.1.0
   file_picker: ^8.0.7
   url_launcher: ^6.3.2
+  excel: ^4.0.6
+  open_file: ^3.3.2
 
 dev_dependencies:
   flutter_test:
